#12: Leverage the font-display CSS feature to ensure text is user-visible while webfonts are loading.

--- a/iconfont/material-icons.scss
+++ b/iconfont/material-icons.scss
@@ -5,6 +5,7 @@
   font-family: $material-icons-font-family;
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url('#{$material-icons-font-file}.eot'); /* For IE6-8 */
   src: local($material-icons-font-family), local($material-icons-font-name),
     url('#{$material-icons-font-file}.woff2') format('woff2'),
